# skin-cancer-classification-v3

./: .gitignore  Dockerfile  Dockerfile.airflow  Makefile  README.md  SOURCE_OVERVIEW.md  airflow.db  bao_cao_du_an.md  data_imbalance_handling.md  docker-compose.yaml  efficientnet_b0_vs_densenet121.md  kien_truc_mo_hinh.md  pyproject.toml  requirements-dev.txt  requirements-mlops.txt  requirements-serving.txt  requirements.txt
configs/: train_config.yaml
configs/densenet121/: densenet121_bs4_gamma2.yaml  densenet121_bs8_gamma2.yaml
configs/eff_B0/: b0_bs16_gamma1.yaml  b0_bs16_gamma2.yaml  b0_bs32_gamma2.yaml
configs/eff_B3/: b3_bs4_gamma2.yaml  b3_bs8_gamma2.yaml
dags/: skin_cancer_pipeline.py
docs/: ARCHITECTURE.md  INSTALL_TROUBLESHOOTING.md
mlops/airflow/: retrain_dag.py
mlops/ray/: tune.py
notebooks/: README.md
reports/: bao_cao_ham10000_mo_hinh.md
reports/b0_bs16_gamma1/metrics/: test_metrics.json  train_history.json
reports/b0_bs16_gamma1_lr5e5_no_sampler_wd5e4/metrics/: test_metrics.json  train_history.json
reports/b0_bs16_gamma2/metrics/: test_metrics.json  train_history.json
reports/b0_bs32_gamma2/metrics/: test_metrics.json  train_history.json
reports/b3_bs4_gamma2/metrics/: test_metrics.json  (+1 more)
reports/predict_image_output/: predictions.csv
reports/selected_test_images_7/: selected_images.csv
scripts/: predict_image.py  predict_images.py  run_evaluate.sh  run_prepare_data.sh  run_train.sh
serving/: app.py  schemas.py
src/skin_cancer/: __init__.py
tests/: test_dataset.py  test_model.py  test_transforms.py
(+27 files in other folders)
